# couscous

./: .env  .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yaml
proto/: couscous.proto
src/: env.rs  main.rs
src/chat/: history.rs  mod.rs  session.rs
src/driver/: driver.rs  mod.rs  ops.rs
src/driver/kalosm/: mod.rs  session.rs
src/driver/ollama/: mod.rs  session.rs
src/server/: include.rs  mod.rs  msg.rs
ui/: buf.gen.yaml  package-lock.json  package.json
ui/src/assets/: main.css
ui/src/components/: MainComponent.vue
ui/src/pb/: couscous_connect.ts  couscous_pb.d.ts  couscous_pb.js  couscous_pb.ts
ui/src/stores/: chat.ts
ui/src/views/: HomeView.vue
