[package]
name = "couscous"
version = "0.1.0"
edition = "2021"

[dependencies]
kalosm = { version = "0.3.2", features = [
    "language",
    "metal",
], default-features = false }
tokio = { version = "1.38.1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
uuid = { version = "1.10.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
tonic-reflection = "0.12.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
async-stream = "0.3.5"
tokio-stream = "0.1.15"
anyhow = "1.0.86"
async-trait = "0.1.81"
ollama-rs = { version = "0.2.1", features = [
    "chat-history",
    "stream",
], optional = true }
dotenvy = "0.15.7"
tonic-web = "0.12.1"
tower-http = { version = "0.5.2", features = ["cors"] }

[target.'cfg(target_os = "macos")'.dependencies]
kalosm = { version = "0.3.2", features = [
    "language",
    "metal",
], default-features = false }

[target.'cfg(not(target_os = "macos"))'.dependencies]
kalosm = { version = "0.3.2", features = [
    "language",
], default-features = false }

[build-dependencies]
tonic-build = "0.12"

[features]
ollama = ["dep:ollama-rs"]
