[package]
name = "couscous"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.0", features = ["full"] }
tonic = "0.12"
prost = "0.13"
uuid = { version = "1.15.1", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
async-trait = "0.1.87"
tonic-reflection = "0.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-stream = "0.3.6"
tokio-stream = "0.1.17"
anyhow = "1.0"
ollama-rs = { version = "0.2.6", features = ["stream"], optional = true }
dotenvy = "0.15.7"
tonic-web = "0.12.3"
tower-http = { version = "0.5.2", features = ["cors"] }

[target.'cfg(target_os = "macos")'.dependencies]
kalosm = { version = "0.4.0", features = ["language", "metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
kalosm = { version = "0.4.0", features = ["language"] }

[build-dependencies]
tonic-build = "0.12"

[features]
ollama = ["dep:ollama-rs"]
